# pyxios

./: .gitignore  README.md  idea.md  pyproject.toml  rename2.py  test_async.py  test_stream.py  test_sync.py  test_v2.py
.github/workflows/: test.yml
axios_python/: __init__.py  client.py  config.py  defaults.py  exceptions.py  helpers.py  progress.py  request.py  response.py
axios_python/cancel/: exceptions.py  token.py
axios_python/interceptors/: chain.py  manager.py
axios_python/middleware/: manager.py  pipeline.py
axios_python/plugins/: auth.py  base.py  cache.py  logger.py
axios_python/retry/: engine.py  strategy.py
axios_python/transport/: base.py  httpx_adapter.py
axios_python/utils/: __init__.py  async_utils.py  merge.py  pydantic.py
axiospy/: __init__.py  client.py  config.py  defaults.py  exceptions.py  request.py  response.py
axiospy/cancel/: exceptions.py  token.py
axiospy/interceptors/: chain.py  manager.py
axiospy/middleware/: manager.py  pipeline.py
axiospy/plugins/: auth.py  base.py  cache.py  logger.py
axiospy/retry/: engine.py  strategy.py
axiospy/transport/: base.py  httpx_adapter.py
axiospy/utils/: async_utils.py  merge.py
tests/: __init__.py  conftest.py  test_all_spread.py  test_cancel.py  test_client.py  test_interceptors.py  test_middleware.py  test_plugins.py  test_progress.py  test_pydantic.py  test_request_methods.py  test_response.py  test_retry.py  test_transforms.py
