[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axios-python"
version = "0.1.0"
description = "A developer-experience-first HTTP client for Python, inspired by Axios."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Avijit" },
]
keywords = ["http", "client", "axios", "interceptors", "middleware", "retry", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/ashavijit/axios_python"
Repository = "https://github.com/ashavijit/axios_python"

[tool.hatch.build.targets.wheel]
packages = ["axios_python"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "axios_python.utils.pydantic"
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
